XMLExper/m12/m12_2_1_tinyxml2/comparisonS.txt
In file included from tinyxml2.cpp:24:
tinyxml2.h: In constructor ‘tinyxml2::XMLDocument::DepthTracker::DepthTracker(tinyxml2::XMLDocument*)’:
tinyxml2.h:1975:29: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLDocument*’ [-fpermissive]
 1975 |    this->_document = /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(document);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                             |
      |                             tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
